# echo-mcp-server

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: check.yml  publish.yml
src/echo_mcp_server/: __init__.py  server.py
tests/: test_server.py
