[project]
name = "echo-mcp-server"
version = "0.1.0"
description = "A simple MCP server that echoes messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
]

[project.scripts]
echo-mcp-server = "echo_mcp_server.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echo_mcp_server"]
