[project]
name = "echo-mcp-server"
version = "0.1.0"
description = "A simple MCP server that echoes messages"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echo_mcp_server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
